ASU-315: Fix anchor navigation spacing

--- a/public/themes/custom/asuntotuotanto/src/scss/components/content/apartment/_anchor-navigation.scss
+++ b/public/themes/custom/asuntotuotanto/src/scss/components/content/apartment/_anchor-navigation.scss
@@ -11,14 +11,11 @@
 .apartment__anchor-list {
   align-items: center;
   display: flex;
+  gap: $spacing-5-xl;
+  justify-content: center;
   list-style: none;
   margin: 0;
   padding: 0;
-  justify-content: center;
-}
-
-.apartment__anchor-item {
-  margin-left: $spacing-5-xl;
 }
 
 .apartment__anchor-link {
