--- a/public/themes/custom/asuntotuotanto/src/scss/components/content/project/_anchor-navigation.scss
+++ b/public/themes/custom/asuntotuotanto/src/scss/components/content/project/_anchor-navigation.scss
@@ -1,90 +1,32 @@
 .project__anchor-navigation {
-  &--desktop {
-    @media screen and (max-width: $breakpoint-l - 1px) {
-      visibility: hidden;
-      display: none;
-    }
-
-    border-bottom: 1px solid var(--color-black-20);
-    margin-top: -5px;
+  @media screen and (max-width: $breakpoint-l - 1px) {
+    visibility: hidden;
+    display: none;
   }
+
+  border-bottom: 1px solid var(--color-black-20);
+  margin-top: -5px;
 }
 
 .project__anchor-list {
   align-items: center;
   display: flex;
+  gap: $spacing-5-xl;
+  justify-content: center;
   list-style: none;
   margin: 0;
   padding: 0;
-
-  .project__anchor-navigation--desktop & {
-    justify-content: center;
-  }
-
-  .project__anchor-navigation--sticky-navigation & {
-    gap: $spacing-m;
-  }
-}
-
-.project__anchor-item {
-  .project__anchor-navigation--desktop & + & {
-    margin-left: $spacing-5-xl;
-  }
 }
 
 .project__anchor-link {
+  @include font-size($fontsize-body-xl, 30px);
+  @include font-weight($bold);
   align-items: center;
   display: inline-flex;
+  padding: $spacing-m;
   text-decoration: none;
 
-  .project__anchor-navigation--desktop & {
-    @include font-size($fontsize-body-xl, 30px);
-    @include font-weight($bold);
-    padding: $spacing-m;
-
-    > svg {
-      margin-right: $spacing-xs;
-    }
-  }
-
-  .project__anchor-navigation--sticky-navigation & {
-    @include font-size($fontsize-body-m, $lineheight-l);
-    padding: $spacing-2-xs;
-    margin-left: -#{$spacing-2-xs};
-
-    @media screen and (min-width: $breakpoint-l) {
-      padding-bottom: $spacing-xl;
-      padding-top: $spacing-xl;
-    }
-
-    @media screen and (min-width: $breakpoint-xl) {
-      padding-bottom: $spacing-m;
-      padding-top: $spacing-m;
-    }
-
-    > svg {
-      display: none;
-      margin-right: $spacing-s;
-      visibility: hidden;
-
-      @media screen and (min-width: $breakpoint-l) {
-        display: inline-block;
-        visibility: visible;
-      }
-    }
-
-    &:hover,
-    &:focus {
-      text-decoration: none;
-    }
-
-    &.is-active {
-      position: relative;
-      box-shadow: inset 0 -2px 0 0 var(--color-black);
-
-      @media screen and (min-width: $breakpoint-l) {
-        box-shadow: inset 0 -3px 0 0 var(--color-black);
-      }
-    }
+  > svg {
+    margin-right: $spacing-xs;
   }
 }
